# overwrite

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-ART  LICENSE-CODE  README.md  ROADMAP.md  build.sh  compile_shaders.sh  push.sh  run.sh
.github/workflows/: build.yml
client/include/ecs/: camera_controller_system.h  client_components.h  client_systems.h
client/include/network/: network_system.h
client/src/ecs/: camera_controller_system.cpp  client_systems.cpp
client/src/network/: network_system.cpp
config/: game_config.json  scene.json
docs/: README.md
docs/core/: camera.md  input.md  physics.md  resource_node_system.md  vulkan.md
docs/ecs/: client_components.md  client_systems.md  overview.md  shared_components.md  shared_systems.md
docs/network/: client_network.md  server_discovery.md  server_network.md
docs/renderer/: light.md  model.md  renderer.md  renderers.md  texture.md
docs/utils/: logger.md  shader_compiler.md
include/: application.h  camera.h  cube_renderer.h  floor_renderer.h  gltf_model.h  i_renderer.h  imgui_manager.h  input.h  light.h  light_manager.h  logger.h  mesh.h  model.h  model_renderer.h  physics.h  render_engine.h  renderer.h  resource_manager.h  scene_config.h  scene_manager.h  shader_compiler.h  skybox_renderer.h  terrain_renderer.h  text_renderer.h  texture.h  texture_loader.h  tree_system.h  vulkan_command_buffer.h  vulkan_device.h  vulkan_framebuffer.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_render_pass.h  vulkan_swapchain.h  vulkan_sync.h
include/core/: application.h  camera.h  game_config.h  game_session.h  i_renderer.h  input.h  physics.h  render_engine.h  renderer.h  resource_manager.h  resource_node_system.h  scene_config.h  scene_manager.h  shader_compiler.h  vulkan_command_buffer.h  vulkan_device.h  vulkan_framebuffer.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_render_pass.h  vulkan_swapchain.h  vulkan_sync.h
include/ecs/: components.h  ecs.h  i_game_world.h  systems.h
include/renderer/: floor_renderer.h  fsr1_pass.h  gltf_model.h  grass_system.h  imgui_manager.h  light.h  light_manager.h  mesh.h  model.h  model_renderer.h  skybox_renderer.h  stone_system.h  terrain_renderer.h  text_renderer.h  texture.h  texture_loader.h  tree_system.h
include/utils/: asset_paths.h  logger.h
plot/: 1.md
scripts/: package_release.sh  push.sh
server/include/server/: server_world.h  websocket_server.h
server/src/: server_main.cpp
server/src/server/: server_world.cpp  websocket_server.cpp
shaders/: fsr1_easu.comp  fsr1_rcas.comp  grass.frag  grass.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
shared/include/: terrain_query.h
shared/include/ecs/: components.h  resource_types.h  systems.h
shared/include/network/: server_discovery.h
shared/src/: terrain_query.cpp
shared/src/ecs/: components.cpp  systems.cpp
shared/src/network/: server_discovery.cpp
src/: main.cpp
src/core/: camera.cpp  input.cpp  light.cpp  light_manager.cpp  physics.cpp  resource_manager.cpp  scene_manager.cpp  vma_impl.cpp  vulkan_command_buffer.cpp  vulkan_device.cpp  vulkan_framebuffer.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_render_pass.cpp  vulkan_swapchain.cpp  vulkan_sync.cpp
src/ecs/: components.cpp  systems.cpp
src/game_session/: game_session.cpp  resource_node_system.cpp
src/renderer/: cube_renderer.cpp  floor_renderer.cpp  fsr1_pass.cpp  gltf_model.cpp  grass_system.cpp  imgui_manager.cpp  mesh.cpp  model.cpp  model_renderer.cpp  renderer.cpp  skybox_renderer.cpp  stone_system.cpp  terrain_renderer.cpp  text_renderer.cpp  texture.cpp  texture_loader.cpp  tree_system.cpp
src/utils/: logger.cpp  scene_config.cpp  shader_compiler.cpp
tests/: CMakeLists.txt  test_asset_paths.cpp  test_config.cpp  test_transform.cpp
